# about-nails

./: .gitignore  README.md  package.json
an-api/: main.py  psql_commands.odt  pyproject.toml
an-api/app/: .gitignore
an-api/app/api/utils/: homepage.py
an-api/app/api/v1/: route_homepage.py
an-api/app/core/: tables_creation.py
an-api/app/core/schemas/: cart.py  category.py  item.py  model.py  order_details.py  payment.py  product.py  product_inventory.py  review.py  shipping_cost.py  tag.py  user.py
an-api/app/db/: base.py  config.py  db_configuration.py  tables_creation.py  tables_definition.py
an-api/app/db/models/: cart.py  category.py  item.py  mixins.py  model.py  order_details.py  payment.py  product.py  product_inventory.py  review.py  shipping_costs.py  tag.py  user.py
an-api/scripts/: ci-pipeline.sh  create_role.sh  python_secret.py  run_tables_creation.py
an-api/secrets/: secret.sh
an-api/tests/: test_an_api.py
marketplace/: package-lock.json  package.json
marketplace/src/: App.js  index.js
marketplace/src/components/: ThemeSwitch.js  cartIcon.js  cartItem.js  cartSideBar.js  expandCollapse.js  faq.js  footer.js  inputSearch.js  navbar.js  products.js  quantitySelect.js  rating.js  select.js  signin.js  signup.js  social.js  table.js
marketplace/src/constants/: allproducts.js  faqData.js
marketplace/src/navigation/: RouterConfig.js  constants.js  routes.js
marketplace/src/styles/: footer.module.css  footerReactMUI.js  header.module.css  headerReactMUI.js  mobileFooter.css  muiTab.css  muiTheme.js  sectionHome.css
(+22 files in other folders)
